@@ -8,6 +8,7 @@ use Math::GSL::Errno qw/:all/;
 use Math::GSL::Machine qw/:all/;
 use Math::GSL::Const qw/:all/;
 use Math::GSL::Sys qw/gsl_nan gsl_isnan gsl_isinf/;
+use Data::Dumper;
 use Carp qw/croak/;
 our @EXPORT = qw();
 our @EXPORT_OK = qw( 
@@ -16,7 +17,7 @@ our @EXPORT_OK = qw(
                      is_similar_relative 
                      verify verify_results 
                      is_windows 
-                     ok_status
+                     ok_status is_status_ok
 );
 use constant GSL_IS_WINDOWS =>  ($^O =~ /MSWin32/i)  ?  1 : 0 ;
 
@@ -198,10 +199,26 @@ function also stringifies the status codes into meaningful messages when it fail
 =cut
 
 sub ok_status {
-    my ($got, $expected) = @_;
+    my ($got, $expected, $msg ) = @_;
     local $Test::Builder::Level = $Test::Builder::Level + 1;
     $expected ||= $GSL_SUCCESS;
-    ok( defined $got && $got == $expected, gsl_strerror(int($got)) );
+    my $strerr = gsl_strerror(int($got));
+    $msg       = $msg ? "$msg: " . $strerr : $strerr;
+
+    ok( defined $got && $got == $expected, $msg );
+}
+
+=head2 is_status_ok($status)
+
+    is_status_ok( $status );
+
+Return true if $status is $GSL_SUCCESS, false otherwise.
+
+=cut
+
+sub is_status_ok {
+    my ($got) = shift;
+    return ( defined $got && $got == $GSL_SUCCESS ) ? 1 : 0 ;
 }
 
 =head2 ok_similar( $x, $y, $msg, $eps)
